[OSGi] Refactoring.